# OculusSDK

./: .gitmodules  CMakeLists.txt  LICENSE.txt  readme.txt
Bindings/C/: CMakeLists.txt
Bindings/C/Include/: OVR_CAPI.h  OVR_CAPI_D3D.h
Bindings/C/Src/: CAPI_DistortionRenderer.cpp  CAPI_DistortionRenderer.h  CAPI_FrameTimeManager.h  CAPI_HMDRenderState.cpp  CAPI_HMDRenderState.h  CAPI_HMDState.cpp  CAPI_HMDState.h  CAPI_HSWDisplay.cpp  CAPI_HSWDisplay.h  OVR_CAPI.cpp
Bindings/C/Src/D3D1X/: CAPI_D3D1X_DistortionRenderer.cpp  CAPI_D3D1X_DistortionRenderer.h  CAPI_D3D1X_HSWDisplay.cpp  CAPI_D3D1X_HSWDisplay.h  CAPI_D3D1X_Util.cpp  CAPI_D3D1X_Util.h  CAPI_D3D9_DistortionRenderer.cpp  CAPI_D3D9_DistortionRenderer.h  CAPI_D3D9_HSWDisplay.cpp  CAPI_D3D9_HSWDisplay.h  CAPI_D3D9_Util.cpp
Bindings/C/Src/GL/: CAPI_GL_DistortionRenderer.cpp  CAPI_GL_DistortionRenderer.h  CAPI_GL_DistortionShaders.h  CAPI_GL_HSWDisplay.cpp  CAPI_GL_HSWDisplay.h  CAPI_GL_Util.cpp  CAPI_GL_Util.h
Bindings/C/Src/Shaders/: DistortionChroma_ps_refl.h  DistortionChroma_vs_refl.h  DistortionTimewarpChroma_vs_refl.h  DistortionTimewarp_vs_refl.h  Distortion_vs_refl.h  SimpleQuad_ps_refl.h  SimpleQuad_vs_refl.h  SimpleTexturedQuad_ps_refl.h  SimpleTexturedQuad_vs_refl.h
LibOVR/: CMakeLists.txt
LibOVR/Src/: OVR_JSON.cpp  OVR_JSON.h  OVR_Profile.cpp  OVR_Profile.h  OVR_SerialFormat.cpp  OVR_SerialFormat.h  OVR_Stereo.cpp  OVR_Stereo.h
LibOVR/Src/Displays/: OVR_Display.h  OVR_Win32_Display.cpp  OVR_Win32_Display.h  OVR_Win32_Dxgi_Display.h  OVR_Win32_FocusReader.cpp  (+3 more)
Samples/OculusRoomTiny/: CMakeLists.txt  OculusRoomModel.cpp  RenderTiny_D3D11_Device.h  Win32_OculusRoomTiny.cpp  Win32_OculusRoomTiny_Util.cpp
Samples/OculusWorldDemo/: CMakeLists.txt  OculusWorldDemo.cpp  OculusWorldDemo.h  OculusWorldDemo_Scene.cpp  Player.cpp  Player.h
(+71 files in other folders)
